--- a/my-app/package.json
+++ b/my-app/package.json
@@ -10,8 +10,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@microsoft/signalr": "^9.0.6",
     "@tailwindcss/vite": "^4.1.14",
     "axios": "^1.12.2",
+    "jwt-decode": "^4.0.0",
     "lucide-react": "^0.545.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
